# euromacro-mcp

./: .gitignore  .mcp.json  CATALOG_SCHEMA.md  CLAUDE.md  DATA_SOURCES.md  README.md  add-series.md  ecb-agent.md  pyproject.toml  test-fetch.md  validate-catalog.md
.claude/: settings.json
.claude/agents/: catalog-agent.md
.claude/skills/: ecb-fetcher.md
.claude/skills/ecb-fetcher/: SKILL.md
catalog/ecb/: README.md  catalog_base.json
catalog/ecb/enriched/: AGR.json  AME.json  BLS.json  BOP.json  BSI.json  CAR.json  CBD2.json  CISS.json  CLIFS.json  CPP.json  DCM.json  DD.json  ECS.json  EST.json  EXR.json  FVC.json  FXI.json  GST.json  HICP.json  ICB.json  ILM.json  IRS.json  OFI.json  OMO.json  PDD.json  PEM.json  PFB.json  PFBM.json  PIS.json  PLB.json  PMC.json  PPC.json  PSN.json  PST.json  PTN.json  RA.json  RAI.json  RDE.json  RESC.json  RESH.json  (+18 more)
catalog/ecb/errors/: BPS.json  CSEC.json  E09.json  E11.json  EDP.json  GFS.json  IDCM.json  IDCS.json  IESS.json  JVS.json  LCI.json  LFSI.json  MNA.json  QSA.json  RAS.json  SHSS.json
catalog/ecb/structures/: AME.json  BKN.json  BNT.json  BOP.json  BSI.json  BSP.json  CCP.json  CES.json  CPP.json  ECS.json  ESA.json  ESB.json  EWT.json  FVC.json  ICB.json  (+38 more)
docs/: ARCHITECTURE.md  CATALOG_SCHEMA.md  DATA_SOURCES.md  OECD_DEVELOPMENT.md  ROADMAP.md
scripts/: bootstrap_metadata.py  enrich_ecb_catalog.py  ingest_ecb_structures.py
src/eurodata_mcp/: __init__.py  server.py
tests/: __init__.py  test_catalog.py  test_ecb_connector.py  test_ecb_dataset_catalog.py  test_natural_language.py  test_tools.py
(+106 files in other folders)
